Annodexless Ogg seeking can't seek to position 0 n times for n streams
Without data_start offset, seeking parses again headers. Headers have eos flag, which increases eos counter. When equal to i_streams, stream is considered finished.
Without data_start offset, seeking parses again headers. Headers have eos flag, which increases eos counter. When equal to i_streams, stream is considered finished.
added Component::Demuxers: Ogg Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
Due to mishandling of Skeleton stream
commit 3bd43453 Author: Francois Cartegnie fcvlcdev@free.fr Date: Wed Oct 23 13:59:15 2013 +0900
demux: ogg: eos workaround for seeking (fix [#9601](https://code.videolan.org/videolan/vlc/-/issues/9601))
added Status::fixed label
closed
changed milestone to %2.2 Features
VideoLAN code repository instance