demux: ogg: eos workaround for seeking (fix #9601)